check_output_latest.txt
    Checking gcodekit4-designer v0.38.0-alpha (/home/thawkins/Projects/gcodekit4/crates/gcodekit4-designer)
error[E0433]: failed to resolve: use of undeclared type `PathShape`
   --> crates/gcodekit4-designer/src/designer_state.rs:642:34
    |
642 |                 let path_shape = PathShape::from_points(&vertices, true);
    |                                  ^^^^^^^^^ use of undeclared type `PathShape`
    |
help: a struct with a similar name exists
    |
642 -                 let path_shape = PathShape::from_points(&vertices, true);
642 +                 let path_shape = PasteShapes::from_points(&vertices, true);
    |
help: consider importing this struct
    |
  4 + use crate::shapes::PathShape;
    |

warning: unused variable: `id`
   --> crates/gcodekit4-designer/src/commands.rs:226:25
    |
226 |                 for (i, id) in cmd.ids.iter().enumerate() {
    |                         ^^ help: if this is intentional, prefix it with an underscore: `_id`
    |
    = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0433`.
warning: `gcodekit4-designer` (lib) generated 1 warning
error: could not compile `gcodekit4-designer` (lib) due to 1 previous error; 1 warning emitted
